--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,14 @@
 Fbld 4:
-* Implement new spec.
-  - Add support for priv and abst.
-  - Add support for modules with anonymous interfaces. 
-* Port existing programs and tests to new spec.
+* Implement new spec as needed for tests to pass.
+* Increase test coverage for spec.
 * Refactor existing programs to take advantage of the new features.
 * Write a new program (deflate) taking advantage of the new features.
 
-Fbld Test:
+Fbld 4 Cleanup:
+* Introduce FbldProto as distinct type from FbldDecl.
+* Put 'access' in front of defn, not each individual defn in parse.y grammar.
+
+Fbld 4 Test:
 * Add a test that you can't use a func, proc, interf, or module as a type
   parameter argument.
 * Add a test that you can't use a type, func, proc, interf as a module
