--- a/langs/fbld.4.txt
+++ b/langs/fbld.4.txt
@@ -659,14 +659,38 @@ A.3. TODO
     import @ { Bool@StdLib; }
   And have that automatically mean:
     import @ { Bool=Bool@StdLib;}
+
+  Yes. This comes up a lot. It makes sense: import the entity locally.
+
 * Do you need to import @ your module's parameters?
   That is, can you say:
    module<type Foo> M {
      func foo( ; Foo);
    }
+
   Or does it need to be:
    module<type Foo> M {
      import @ { Foo; };
      func foo( ; Foo);
    }
+
+  The second makes more sense if you think about '{' as introducing the name
+  space, and is nicer for when modules are implemented in separate files,
+  where the explicit import is needed to know that Foo comes from outside the
+  file. But it would mean having this funny intermediate namespace and seems
+  like it would be annoying to always have to import the parameters every
+  time.
+
+* Importing entities Foo@Foo and Bar@Foo from a parent requires name
+  shuffling:
+  import @ { FooM = Foo; };
+  import FooM { Foo; Bar; };
+
+  You can't have both the module and entity Foo in the scope under the same
+  name. This seems to happen pretty often. Is it okay to require the rename,
+  or should we find a better solution to this?
+
+* Have some way to put interfaces in separate files, not just modules.
+  But now it is more awkward that we don't see parameter types in the file
+  with the body of the interface.
   
