--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@ Fbld 4 Cleanup:
 * Put 'access' in front of defn, not each individual defn in parse.y grammar.
 
 Fbld 4 Test:
+* Test that you can't have two static parameters with the same name.
 * Add a test that you can't use a func, proc, interf, or module as a type
   parameter argument.
 * Add a test that you can't use a type, func, proc, interf as a module
