--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,15 @@
 Fbld 4:
 * Implement new spec as needed for tests to pass.
- - Fix order dependency issue in check.
+ - Fix support for recursion.
 * Increase test coverage for spec.
 * Refactor existing programs to take advantage of the new features.
 * Write a new program (deflate) taking advantage of the new features.
 
 Fbld 4 Cleanup:
 * Introduce FbldProto as distinct type from FbldDecl.
+* Clean up error tracking in check
+ - Each declaration should know if it errored, independant of the other
+   declarations.
 * Put 'access' in front of defn, not each individual defn in parse.y grammar.
 
 Fbld 4 Test:
