--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,8 @@ Fbld 4:
 Fbld 4 Test:
 * Switch to DebugMallocArena for fbld-test
   - Will requiring fixing all the crazy memory leaks in parser and checker.
+* Test that you can't have a public entity that refers to a private entity in
+  the prototype.
 * Can you output abstract or private types in fbld-test?
 * Test that you can't have recursion through a module declaration.
 * Test that you can't have two static parameters with the same name.
