--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 Fbld 4:
 * Check that static params don't redefine names.
+ - Need some way to keep track of parameter names through CheckDecl calls.
 * Check that static args have the right kind.
+* Check that public entity doesn't refer to a private one.
 * Increase test coverage for spec.
 * Add support for aliases
   - Add Alias alongside Import in Program.
