--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Fbld 4:
 * Check that static args have the right kind.
 * Check that public entity doesn't refer to a private one.
-* Add test to cover bug found by AllTests.
+* Debug poly-poly-regression.
 * Increase test coverage for spec.
 * Add support for aliases
   - Add Alias alongside Import in Program.
@@ -10,6 +10,10 @@ Fbld 4:
 * Implement deflate program.
 
 Fbld 4 Test:
+* Catch AllTest and other failures and continue rather than aborting like we
+  do now.
+   - In other words, factor out ability to "test" a generic tcl function call,
+     and reuse that for spec tests and high level fbld tests.
 * Test that you can use a function foo<type A>(A x) where function
   foo<type B>(B x) is expected.
 * Test that a function foo(A x ; B) can be used where a function foo(A y ; B)
