--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,10 @@ Fbld 4:
 * Figure out what error locations the error messages should have when a qref
   doesn't match its proto or a module decl doesn't match its proto.
 * Check that public entity doesn't refer to a private one.
-* Debug poly-poly-regression.
+ - The visibility of the entity should not be wider than the visibility of any
+   of its arguments.
+* Create regression test for failing assertion in AllTests.
+ - MapP, MapS<type A, func F(A x; A)> should be enough.
 * Increase test coverage for spec.
 * Add support for aliases
   - Add Alias alongside Import in Program.
