--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,16 @@ Fbld 4:
 * Check that public entity doesn't refer to a private one.
  - The visibility of the entity should not be wider than the visibility of any
    of its arguments.
-* Create regression test for failing assertion in AllTests.
- - MapP, MapS<type A, func F(A x; A)> should be enough.
+* Fix 3.2-09, 3.2-10 tests
+ - Need to distinguish between SProto and Proto for EnsureProto?
+   For example, consider:
+    struct Foo<type A, func F(A x; A)>(Bar<A, F> bar);
+    struct Bar<Type A, func F(A x; A)>(Foo<A, F> foo);
+
+   This recursion should be allowed, but to check that Bar<A, F> is valid, we
+   must first check the SProto of Bar. If we try to check the Proto of Bar
+   instead of the SProto, that requires we check the SProto of Foo. If we try
+   to check the Proto of Foo instead, we report a prototype recursion.
 * Increase test coverage for spec.
 * Add support for aliases
   - Add Alias alongside Import in Program.
