--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
 Fbld 4:
-* Figure out what error locations the error messages should have when a qref
-  doesn't match its proto or a module decl doesn't match its proto.
 * Fix 3.2-09, 3.2-10 tests
  - Need to distinguish between SProto and Proto for EnsureProto?
    For example, consider:
@@ -27,6 +25,8 @@ Fbld 4 Test:
 * Test that a public module (header?) cannot refer to a private entity.
 * Reorganize tests for module vs. interface protos
  - By decl type and sub-error within it. And better name them.
+ - And change the location to be the module decl name.
+ - And print the actual and expected prototypes in the message.
 * Test that you can use a function foo<type A>(A x) where function
   foo<type B>(B x) is expected.
 * Test that a function foo(A x ; B) can be used where a function foo(A y ; B)
