--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,11 @@
 Fbld 4:
-* Increase test coverage for spec.
-* Add support for aliases
+* Use aliases to share Bit composition code in md5
+  - Add test for Md5 that covers bit parsing.
+  - Fix bit parsing in Md5
+  - Add function for getting MSB of a bit, add it to Bit1 through 64.
   - Add Alias alongside Import in Program.
+* Increase test coverage for spec.
 * Add support for specifying interfaces in different files?
-* Refactor md5 program to share Bit composition code.
 * Implement deflate program.
 
 Fbld 4 Test:
