--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,13 @@
 Fbld 4:
 * Use aliases to share Bit composition code in md5
-  - Clarify in spec that alias cannot be private or abstract. Or can they? And
-    if not, how to deal with the shift-reduce conflicts that show up?
+  - Clarify in spec that alias acts as another way to define the body of an
+    entity, it doesn't effect the use of that entity.
+  - Update syntax reference in spec for aliases.
 * Increase test coverage for spec.
 * Add support for specifying interfaces in different files?
 * Implement deflate program.
 
 Fbld 4 Test:
-* Test that alias cannot be private or abstract.
 * Test alias visible access and invisible access.
 * Test that alias protos and qrefs are checked.
 * Test that alias qref matches its proto.
