--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 Fbld 4:
 * Use aliases to share Bit composition code in md5
+  - Figure out how to deal with the fact that aliases aren't fully resolved
+    for compilation because we can't do proper type check if they are fully
+    resolved (test 3.4-01).
   - Clarify in spec that alias acts as another way to define the body of an
     entity, it doesn't effect the use of that entity.
   - Update syntax reference in spec for aliases.
