--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Fbld 4:
 * Use aliases to share Bit composition code in md5
-  - Test and fix bug with private aliases being resolved for name import that
-    supply parameter values.
+  - Fix 3.4-02: make a wrapper around FbldImportQRef
+    in compile.c that dealiases the result. That should be enough I think.
   - Clarify in spec that alias acts as another way to define the body of an
     entity, it doesn't effect the use of that entity.
   - Update syntax reference in spec for aliases.
