--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 Fbld 4:
 * Use aliases to share Bit composition code in md5
-  - Fix 3.4-02: make a wrapper around FbldImportQRef
-    in compile.c that dealiases the result. That should be enough I think.
+  - Make a regression test to catch AllTest failure. And fix the bug.
   - Clarify in spec that alias acts as another way to define the body of an
     entity, it doesn't effect the use of that entity.
   - Update syntax reference in spec for aliases.
