--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 Fbld 4:
 * Use aliases to share Bit composition code in md5
-  - Understand and fix 3.2-11.
+  - Expand use of alias to rest of Bit types.
   - Clarify in spec that alias acts as another way to define the body of an
     entity, it doesn't effect the use of that entity.
   - Update syntax reference in spec for aliases.
